--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -8,10 +8,10 @@ proxies:
   - &id001
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: 162.159.142.209
-    port: 80
+    server: server32.beheshtbaneh.com
+    port: 8880
     cipher: auto
-    uuid: 3a333291-9bd1-46c5-b9a9-370b5a3d1bd9
+    uuid: 044ba8ed-7285-472a-bc14-fb91dc6be4c9
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -19,29 +19,14 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: us3.visaapp.top
+        host: server32.beheshtbaneh.com
   - &id002
     name: 🇺🇸_US_美国_2
     type: vmess
-    server: 2.namesilo123.top
-    port: 2082
+    server: 104.22.51.162
+    port: 80
     cipher: auto
-    uuid: 1da87704-2807-4f4a-bb7c-4414dc0e817e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: freezhang.sanfen002.top
-  - &id003
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 172.67.166.190
-    port: 8080
-    cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -49,8 +34,33 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: www.crispyrainbow.online
+        host: my1.tooters.ir
+  - &id003
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: trojan
+    server: xibaozi.19890604.day
+    port: 10850
+    udp: true
+    password: e8977c57-c5c2-478f-a67a-5af7ba873eac
+    sni: cloudflare.node-ssl.cdn-alibaba.com
+    skip-cert-verify: true
+    network: tcp
   - &id004
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 104.24.208.37
+    port: 80
+    cipher: auto
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: my1.tooters.ir
+  - &id005
     name: 🇺🇸_US_美国_4
     type: vmess
     server: www.crispyrainbow.online
@@ -65,13 +75,13 @@ proxies:
       path: /
       headers:
         host: www.crispyrainbow.online
-  - &id005
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
+  - &id006
+    name: 🇺🇸_US_美国_5
     type: vmess
-    server: 162.159.200.5
-    port: 80
+    server: 172.67.166.190
+    port: 8080
     cipher: auto
-    uuid: 3a333291-9bd1-46c5-b9a9-370b5a3d1bd9
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -79,11 +89,21 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: ca3.889611.com
-  - &id006
-    name: 🇺🇸_US_美国_5
+        host: www.crispyrainbow.online
+  - &id007
+    name: 🇨🇳_CN_中国->🇨🇿_CZ_捷克
+    type: trojan
+    server: xibaozi.19890604.day
+    port: 10846
+    udp: true
+    password: e8977c57-c5c2-478f-a67a-5af7ba873eac
+    sni: cloudflare.node-ssl.cdn-alibaba.com
+    skip-cert-verify: true
+    network: tcp
+  - &id008
+    name: 🇺🇸_US_美国_6
     type: vmess
-    server: www.blueberrywindow.online
+    server: 104.21.94.99
     port: 8080
     cipher: auto
     uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
@@ -95,52 +115,7 @@ proxies:
       path: /
       headers:
         host: www.blueberrywindow.online
-  - &id007
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 104.20.231.30
-    port: 80
-    cipher: auto
-    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: my1.tooters.ir
-  - &id008
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: 104.21.23.176
-    port: 8080
-    cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: www.crispyrainbow.biz
   - &id009
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: 104.18.15.151
-    port: 80
-    cipher: auto
-    uuid: 3a333291-9bd1-46c5-b9a9-370b5a3d1bd9
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: us3.889611.com
-  - &id010
     name: 🇺🇸_US_美国->🇮🇷_IR_伊朗_1
     type: vmess
     server: www.crispyrainbow.biz
@@ -155,70 +130,25 @@ proxies:
       path: /
       headers:
         host: www.crispyrainbow.biz
+  - &id010
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: server31.beheshtbaneh.com
+    port: 8880
+    cipher: auto
+    uuid: 4154143c-bbba-47a4-9f79-c2ed087cbcc9
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: server31.beheshtbaneh.com
   - &id011
-    name: 🇺🇸_US_美国_9
+    name: 🇺🇸_US_美国_8
     type: vmess
-    server: 8.namesilo123.top
-    port: 2082
-    cipher: auto
-    uuid: 1da87704-2807-4f4a-bb7c-4414dc0e817e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: freezhang.sanfen002.top
-  - &id012
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度
-    type: vmess
-    server: cf-cdn.981545.xyz
-    port: 2082
-    cipher: auto
-    uuid: 1f7c4a0b-3fd0-4b19-bbc6-d09fc89a4c10
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /index?ed=2048
-      headers:
-        host: cfydmm.981545.xyz
-  - &id013
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: vmess
-    server: 45.144.2.113
-    port: 80
-    cipher: auto
-    uuid: 3a333291-9bd1-46c5-b9a9-370b5a3d1bd9
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: www.apple.com
-  - &id014
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
-    type: vmess
-    server: 162.159.200.3
-    port: 80
-    cipher: auto
-    uuid: 3a333291-9bd1-46c5-b9a9-370b5a3d1bd9
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ca3.visaapp.top
-  - &id015
-    name: 🇺🇸_US_美国_10
-    type: vmess
-    server: www.coldstone.club
+    server: 172.67.212.114
     port: 8080
     cipher: auto
     uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
@@ -229,50 +159,54 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: www.coldstone.club
-  - &id016
-    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦_1
+        host: www.crispyrainbow.biz
+  - &id012
+    name: 🇺🇸_US_美国_9
     type: vmess
-    server: 104.18.15.149
-    port: 80
+    server: 104.19.87.19
+    port: 2052
     cipher: auto
-    uuid: 3a333291-9bd1-46c5-b9a9-370b5a3d1bd9
+    uuid: e393dd86-fddc-4bce-8abe-d902cf831670
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /video/DDC4btA8wc/
       headers:
-        host: er3.visaapp.top
-  - &id017
-    name: 🇺🇸_US_美国->🇵🇳_PN_皮特凯恩_1
+        host: us2jdgv5GC7.fzbqfrse.xyz
+  - &id013
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: trojan
+    server: xibaozi.19890604.day
+    port: 10837
+    udp: true
+    password: e8977c57-c5c2-478f-a67a-5af7ba873eac
+    sni: cloudflare.node-ssl.cdn-alibaba.com
+    skip-cert-verify: true
+    network: tcp
+  - &id014
+    name: 🇺🇸_US_美国_10
     type: vmess
-    server: 173.249.197.176
-    port: 443
+    server: cfcdn1.sanfencdn9.com
+    port: 2052
     cipher: auto
-    uuid: e4c9dc48-f9dc-4d9b-9318-a3933d113736
+    uuid: e393dd86-fddc-4bce-8abe-d902cf831670
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id018
-    name: 🇮🇪_IE_爱尔兰
-    type: trojan
-    server: 52.49.249.102
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id019
+    network: ws
+    ws-opts:
+      path: /video/DDC4btA8wc/
+      headers:
+        host: us2jdgv5GC7.fzbqfrse.xyz
+  - &id015
     name: 🇺🇸_US_美国_11
     type: vmess
-    server: 104.18.154.42
-    port: 80
+    server: www.blueberrywindow.online
+    port: 8080
     cipher: auto
-    uuid: 3a333291-9bd1-46c5-b9a9-370b5a3d1bd9
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -280,43 +214,93 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: us3.visaapp.top
-  - &id020
-    name: 🇫🇷_FR_法国
+        host: www.blueberrywindow.online
+  - &id016
+    name: 🇺🇸_US_美国_12
+    type: vmess
+    server: 104.17.19.122
+    port: 2052
+    cipher: auto
+    uuid: e393dd86-fddc-4bce-8abe-d902cf831670
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /video/DDC4btA8wc/
+      headers:
+        host: us2jdgv5GC7.fzbqfrse.xyz
+  - &id017
+    name: 🇺🇸_US_美国_13
+    type: vmess
+    server: 45.32.192.94
+    port: 12079
+    cipher: auto
+    uuid: e63f477b-59d7-485e-9385-c38888b60cbf
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id018
+    name: 🇺🇸_US_美国_14
+    type: vmess
+    server: 104.21.82.183
+    port: 8880
+    cipher: auto
+    uuid: c5626b16-4c57-4d7e-8668-6b1ecda5c8b5
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: server6.beheshtbaneh.com
+  - &id019
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
     type: trojan
-    server: 15.237.201.223
+    server: xibaozi.19890604.day
+    port: 10847
+    udp: true
+    password: e8977c57-c5c2-478f-a67a-5af7ba873eac
+    sni: cloudflare.node-ssl.cdn-alibaba.com
+    skip-cert-verify: true
+    network: tcp
+  - &id020
+    name: 🇺🇸_US_美国_15
+    type: vmess
+    server: server4.beheshtbaneh.com
+    port: 8880
+    cipher: auto
+    uuid: b7e04f2a-2a6a-4b74-a11e-06f658c36391
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: server4.beheshtbaneh.com
+  - &id021
+    name: 🇬🇧_GB_英国
+    type: trojan
+    server: 18.134.176.184
     port: 22222
     udp: true
     password: telegram-id-directvpn
     sni: trj.rollingnext.co.uk
     skip-cert-verify: false
     network: tcp
-  - &id021
-    name: 🇨🇦_CA_加拿大
-    type: vmess
-    server: 108.181.2.154
-    port: 33445
-    cipher: auto
-    uuid: 7de8d7aa-ae4a-4d75-82f4-2e8b46fc0290
-    alterId: 0
-    tls: false
+  - &id022
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
+    type: trojan
+    server: xibaozi.19890604.day
+    port: 10838
+    udp: true
+    password: e8977c57-c5c2-478f-a67a-5af7ba873eac
+    sni: cloudflare.node-ssl.cdn-alibaba.com
     skip-cert-verify: true
     network: tcp
-  - &id022
-    name: 🇺🇸_US_美国_12
-    type: vmess
-    server: 104.21.83.10
-    port: 8080
-    cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: www.coldstone.club
   - &id023
     name: 🇺🇸_US_美国->🇮🇷_IR_伊朗_2
     type: vmess
@@ -333,119 +317,44 @@ proxies:
       headers:
         host: www.darkroom.lol
   - &id024
-    name: 🇺🇸_US_美国_13
-    type: vmess
-    server: 11.namesilo123.top
-    port: 8880
-    cipher: auto
-    uuid: 1da87704-2807-4f4a-bb7c-4414dc0e817e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: freezhang.sanfen002.top
-  - &id025
-    name: 🇺🇸_US_美国_14
-    type: vmess
-    server: 27.namesilo123.top
-    port: 2082
-    cipher: auto
-    uuid: 1da87704-2807-4f4a-bb7c-4414dc0e817e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: freezhang.sanfen002.top
-  - &id026
-    name: 🇷🇼_RW_卢旺达
-    type: vmess
-    server: 197.243.57.239
-    port: 22222
-    cipher: auto
-    uuid: e4c9dc48-f9dc-4d9b-9318-a3933d113736
-    alterId: 0
-    tls: false
+    name: 🇨🇳_CN_中国->🇦🇹_AT_奥地利
+    type: trojan
+    server: xibaozi.19890604.day
+    port: 10848
+    udp: true
+    password: e8977c57-c5c2-478f-a67a-5af7ba873eac
+    sni: cloudflare.node-ssl.cdn-alibaba.com
     skip-cert-verify: true
     network: tcp
-  - &id027
-    name: 🇺🇸_US_美国_15
-    type: vmess
-    server: 27.namesilo123.top
-    port: 8880
-    cipher: auto
-    uuid: 1da87704-2807-4f4a-bb7c-4414dc0e817e
-    alterId: 0
-    tls: false
+  - &id025
+    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
+    type: trojan
+    server: xibaozi.19890604.day
+    port: 10845
+    udp: true
+    password: e8977c57-c5c2-478f-a67a-5af7ba873eac
+    sni: cloudflare.node-ssl.cdn-alibaba.com
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: freezhang.sanfen002.top
-  - &id028
+    network: tcp
+  - &id026
     name: 🇺🇸_US_美国_16
     type: vmess
-    server: 94.131.10.135
-    port: 8080
+    server: server3.beheshtbaneh.com
+    port: 8880
     cipher: auto
-    uuid: e2021c91-6e29-49d6-9641-14a8f2600e05
+    uuid: e305fc57-6153-4650-8c52-9a36865a199d
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /vmess
-  - &id029
+      path: /
+      headers:
+        host: server3.beheshtbaneh.com
+  - &id027
     name: 🇺🇸_US_美国_17
     type: vmess
-    server: 104.18.15.147
-    port: 80
-    cipher: auto
-    uuid: 3a333291-9bd1-46c5-b9a9-370b5a3d1bd9
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: us3.889611.com
-  - &id030
-    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦_2
-    type: vmess
-    server: 162.159.200.7
-    port: 80
-    cipher: auto
-    uuid: 3a333291-9bd1-46c5-b9a9-370b5a3d1bd9
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: er3.visaapp.top
-  - &id031
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国
-    type: vmess
-    server: dx-us.85413.xyz
-    port: 11114
-    cipher: auto
-    uuid: 1f7c4a0b-3fd0-4b19-bbc6-d09fc89a4c10
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id032
-    name: 🇺🇸_US_美国_18
-    type: vmess
-    server: 172.67.212.114
+    server: 104.21.23.176
     port: 8080
     cipher: auto
     uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
@@ -457,13 +366,13 @@ proxies:
       path: /
       headers:
         host: www.crispyrainbow.biz
-  - &id033
-    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦_3
+  - &id028
+    name: 🇺🇸_US_美国_18
     type: vmess
-    server: 104.18.15.148
+    server: 104.20.231.30
     port: 80
     cipher: auto
-    uuid: 3a333291-9bd1-46c5-b9a9-370b5a3d1bd9
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -471,14 +380,14 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: er3.889611.com
-  - &id034
-    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦_4
+        host: my1.tooters.ir
+  - &id029
+    name: 🇺🇸_US_美国->🇷🇴_RO_罗马尼亚
     type: vmess
-    server: 104.18.15.150
+    server: 104.17.25.1
     port: 80
     cipher: auto
-    uuid: 3a333291-9bd1-46c5-b9a9-370b5a3d1bd9
+    uuid: 4e23bd4f-cc11-4ade-fbc1-fcaf245662bf
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -486,25 +395,14 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: er3.889611.com
-  - &id035
-    name: 🇺🇸_US_美国->🇵🇳_PN_皮特凯恩_2
+        host: lmnyvpn.catnipballs.gay
+  - &id030
+    name: 🇺🇸_US_美国_19
     type: vmess
-    server: pitcairn.ednovas.org
-    port: 443
+    server: server10.beheshtbaneh.com
+    port: 8880
     cipher: auto
-    uuid: e4c9dc48-f9dc-4d9b-9318-a3933d113736
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id036
-    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦_5
-    type: vmess
-    server: 162.159.200.6
-    port: 80
-    cipher: auto
-    uuid: 3a333291-9bd1-46c5-b9a9-370b5a3d1bd9
+    uuid: 66d4af1c-fcc3-479b-847c-3260253e1faa
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -512,7 +410,7 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: er3.889611.com
+        host: server10.beheshtbaneh.com
 proxy-groups:
   - name: PROXY
     type: select
@@ -569,12 +467,6 @@ proxy-groups:
       - *id028
       - *id029
       - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -610,12 +502,6 @@ proxy-groups:
       - *id028
       - *id029
       - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
   - name: SELECT
     type: select
     proxies:
@@ -649,12 +535,6 @@ proxy-groups:
       - *id028
       - *id029
       - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
